--- a/rentcab/inquilinos/templates/inquilinos/base.html
+++ b/rentcab/inquilinos/templates/inquilinos/base.html
@@ -20,7 +20,8 @@
               rel="stylesheet"/>
         <link href="{% static 'inquilinos/css/navbar.css' %}" rel="stylesheet"/>
     </head>
-    <body style="font-family: 'Poppins', sans-serif;" class="bg-light">
+    {% comment %} <body style="font-family: 'Poppins', sans-serif;" class="bg-light"> {% endcomment %}
+    <body class="bg-light">
         <main>
             <nav class="navbar navbar-expand-xl fixed-top navbar-light border-bottom border-green">
                 <div class="container-fluid">
