--- a/rentcab/inquilinos/templates/inquilinos/index.html
+++ b/rentcab/inquilinos/templates/inquilinos/index.html
@@ -5,10 +5,7 @@
         <div class="bg-light p-5 rounded">
             <div class="col-sm-8 mx-auto">
                 <img src="{% static 'inquilinos/images/lapraderalogo.jpg' %}"
-                     class="img-thumbnail"
-                     style="max-height:200px;
-                            float: left;
-                            margin-right: 20px;"
+                     class="img-thumbnail tumneil"
                      alt=""/>
                 <h1>La Pradera</h1>
                 <p align="justify">
