--- a/rentcab/templates/registration/login.html
+++ b/rentcab/templates/registration/login.html
@@ -23,7 +23,7 @@
                 <label class="form-label" for="typePasswordX">Contraseña</label>
             </div>
             {% if form.errors %}
-                <p style="color:red">
+                <p class="text-danger">
                     <strong>Usuario o contraseña incorrecta.</strong>
                 </p>
             {% endif %}
