--- a/rentcab/templates/registration/password_reset_confirm.html
+++ b/rentcab/templates/registration/password_reset_confirm.html
@@ -21,7 +21,7 @@
                             <label class="form-label" for="id_new_password1">
                                 Ingresa una nueva contraseña
                                 {% if form.new_password1.errors %}
-                                    {% for error in form.new_password1.errors %}<div style="color: red; font-weight:bolder">{{ error }}</div>{% endfor %}
+                                    {% for error in form.new_password1.errors %}<div class="font-weight-bold text-danger"><strong>{{ error }}</strong></div>{% endfor %}
                                 {% endif %}
                             </label>
                         </center>
@@ -36,7 +36,7 @@
                             <label class="form-label" for="id_new_password2">
                                 Repite la contraseña
                                 {% if form.new_password2.errors %}
-                                    {% for error in form.new_password2.errors %}<div style="color: red; font-weight:bolder">{{ error }}</div>{% endfor %}
+                                    {% for error in form.new_password2.errors %}<div class="font-weight-bold text-danger"><strong>{{ error }}</strong></div>{% endfor %}
                                 {% endif %}
                             </label>
                         </center>
@@ -52,12 +52,12 @@
         <div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white">
             <div class="container">
                 <div class="row">
-                    <h5 style="color: red;">
+                    <h5 class="text-danger">
                         <center>El restablecimiento de la contraseña falló.</center>
                     </h5>
                 </div>
                 <div class="row text-justify">
-                    <p style="font-size: 16px;text-align: center;">
+                    <p class="cartelito-pasresconf">
                         <strong>El enlace para restablecer la contraseña no es válido, posiblemente porque ya ha sido utilizado. Por favor, solicite un nuevo restablecimiento de contraseña.</strong>
                     </p>
                 </div>
