template html para mails de reserva registrada

--- a/rentcab/templates/registration/password_reset_confirm.html
+++ b/rentcab/templates/registration/password_reset_confirm.html
@@ -21,7 +21,11 @@
                             <label class="form-label" for="id_new_password1">
                                 Ingresa una nueva contraseña
                                 {% if form.new_password1.errors %}
-                                    {% for error in form.new_password1.errors %}<div class="font-weight-bold text-danger"><strong>{{ error }}</strong></div>{% endfor %}
+                                    {% for error in form.new_password1.errors %}
+                                        <div class="font-weight-bold text-danger">
+                                            <strong>{{ error }}</strong>
+                                        </div>
+                                    {% endfor %}
                                 {% endif %}
                             </label>
                         </center>
@@ -36,7 +40,11 @@
                             <label class="form-label" for="id_new_password2">
                                 Repite la contraseña
                                 {% if form.new_password2.errors %}
-                                    {% for error in form.new_password2.errors %}<div class="font-weight-bold text-danger"><strong>{{ error }}</strong></div>{% endfor %}
+                                    {% for error in form.new_password2.errors %}
+                                        <div class="font-weight-bold text-danger">
+                                            <strong>{{ error }}</strong>
+                                        </div>
+                                    {% endfor %}
                                 {% endif %}
                             </label>
                         </center>
