--- a/rentcab/inquilinos/templates/inquilinos/base.html
+++ b/rentcab/inquilinos/templates/inquilinos/base.html
@@ -19,6 +19,7 @@
         <link href="{% static 'inquilinos/css/bootstrap.min.css' %}"
               rel="stylesheet"/>
         <link href="{% static 'inquilinos/css/navbar.css' %}" rel="stylesheet"/>
+        <link rel="shortcut icon" type="image/png" href="{% static 'inquilinos/images/favicon.ico' %}"/>
     </head>
     {% comment %} <body style="font-family: 'Poppins', sans-serif;" class="bg-light"> {% endcomment %}
     <body class="bg-light">
