--- a/rentcab/inquilinos/templates/inquilinos/reserva_detail.html
+++ b/rentcab/inquilinos/templates/inquilinos/reserva_detail.html
@@ -47,13 +47,13 @@
                         {% endif %}
                     </li>
                     {% if reserva.get_estado.nombre != "Cancelada" %}
-                    <hr/>
-                    <li>
-                        <form action="" method="post">
-                            {% csrf_token %}
-                            <input class="btn btn-secondary" type="submit" value="Cancelar reserva">
-                        </form>
-                    </li>
+                        <hr/>
+                        <li>
+                            <form action="" method="post">
+                                {% csrf_token %}
+                                <input class="btn btn-secondary" type="submit" value="Cancelar reserva"/>
+                            </form>
+                        </li>
                     {% endif %}
                 </ul>
             </div>
