--- a/rentcab/templates/403.html
+++ b/rentcab/templates/403.html
@@ -1,4 +1,4 @@
-{# 403 #}
+{# 403 #} {# hay que arreglar el path #}
 {% extends "inquilinos/base.html" %}
 {% if request.path == '/inquilinos/cab/cabana-chica/reservar' %}
     {% block content %}
