--- a/rentcab/templates/403.html
+++ b/rentcab/templates/403.html
@@ -1,15 +1,15 @@
 {# 403 #} {# hay que arreglar el path #}
 {% extends "inquilinos/base.html" %}
-{% if request.path == '/inquilinos/cab/cabana-chica/reservar' %}
     {% block content %}
         <br/>
         <div class="col-md-3 offset-md-4 p-4 d-flex justify-content-center border rounded bg-white">
             <div class="container">
                 <div class="row">
                     <p>
-                        <center>Para consultar la disponibilidad de las cabañas y registrar reservas debes completar tus datos personales.</center>
+                        <center>{{ exception }}</center>
                     </p>
                 </div>
+                {% if '/inquilinos/cab/' in request.path and 'reservar' in request.path %}
                 <div class="row">
                     <button class="btn btn-outline-primary btn-sm px-5"
                             onclick="location.href='{% url 'inquilinos:crear-huesped' %}'"
@@ -17,7 +17,7 @@
                         Completar datos personales.
                     </button>
                 </div>
+                {% endif %}
             </div>
         </div>
     {% endblock %}
-{% endif %}
