--- a/rentcab/inquilinos/templates/inquilinos/cab_detail.html
+++ b/rentcab/inquilinos/templates/inquilinos/cab_detail.html
@@ -1,38 +1,15 @@
 {% extends 'inquilinos/base.html' %}
 {% block content %}
     {% load static %}
-    <div class="p-3">
+    <br>
+    <div class="row">
         <center>
             <h1>{{ cab.nombre }}</h1>
         </center>
-        <div class="col-md-8 offset-md-2">
-            <ul class="list-group col-md-6 offset-md-3 mb-3 text-center">
-                {% for inst in cab.instalacion_set.all  %}
-                    <li class="list-group-item">
-                        {{ inst.descripcion }}<i class="bi bi-check-all"></i>
-                    </li>
-                {% endfor %}
-                <li class="list-group-item">Precio final por noche: {{ cab.costoPorNoche }}</li>
-                <li class="list-group-item">
-                    {{ cab.cantHabitaciones }}
-                    {% if cab.cantHabitaciones > 1 %}
-                        habitaciones.
-                    {% else %}
-                        habitación.
-                    {% endif %}
-                </li>
-                {% if cab.calificacion_promedio %}
-                <li class="list-group-item" id="calificacion_id">
-                    Calificación promedio: <span id="estrellas" style="color:goldenrod;"></span>
-                </li>
-                {% endif %}
-            </ul>
-            <button type="button"
-                    onclick="location.href='{% url 'inquilinos:reg-res' cab.slug %}'"
-                    class="btn btn-primary col-md-6 offset-md-3 mb-3">
-                Consultar disponibilidad
-            </button>
-            <div id="gallery" class="carousel slide marigen" data-bs-ride="carousel">
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div id="gallery" class="carousel slide me-2 ms-5 mt-2 mb-2" data-bs-ride="carousel">
                 <ul class="carousel-indicators">
                     <li data-bs-target="#gallery" data-bs-slide-to="0" class="active"></li>
                     {% for foto in cab.foto_set.all %}
@@ -68,17 +45,60 @@
                 </button>
             </div>
         </div>
+        <div class="col-md-6">
+                <ul class="list-group col-md-10 offset-md-1 mb-3 mt-4 text-center">
+                {% comment %} <ul class="list-group mb-3 text-center"> {% endcomment %}
+                    {% for inst in cab.instalacion_set.all  %}
+                        <li class="list-group-item">
+                            {{ inst.descripcion }}<i class="bi bi-check-all"></i>
+                        </li>
+                    {% endfor %}
+                    <li class="list-group-item">Precio final por noche: {{ cab.costoPorNoche }}</li>
+                    <li class="list-group-item">
+                        {{ cab.cantHabitaciones }}
+                        {% if cab.cantHabitaciones > 1 %}
+                            habitaciones.
+                        {% else %}
+                            habitación.
+                        {% endif %}
+                    </li>
+                    {% if cab.calificacion_promedio %}
+                    <li class="list-group-item" id="calificacion_id">
+                        Calificación promedio: <span id="estrellas" style="color:goldenrod;"></span>
+                    </li>
+                    {% endif %}
+                </ul>
+                <button type="button"
+                        onclick="location.href='{% url 'inquilinos:reg-res' cab.slug %}'"
+                        class="btn btn-primary col-md-6 offset-md-3 mb-3">
+                    Consultar disponibilidad
+                </button>
+        </div>
     </div>
-    <p id="cal_prom_id" style="display: none">{{cab.calificacion_promedio}}</p>
-    <script>
-        let avgPython = "{{ cab.calificacion_promedio }}"
-        let avgStars = avgPython.replaceAll(',', '.');
-        console.log(avgStars)
-        let stars = '&#9733;';
-        for(var i = 0 ;i<(Math.round(avgStars))-1;i++)
-        {
-          stars=stars+' &#9733;';
-        }
-        document.getElementById('estrellas').innerHTML = stars;
-    </script>
+    <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                {% for comentario in comentarios  %}
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            {% comment %} <img src="{{ cab.foto_set.first.foto.url }}" alt=""/> {% endcomment %}
+                            <div class="card-body">
+                                <p class="card-text">
+                                    {{ comentario.comentario}}
+                                </p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <small class="text-muted">{{ comentario.huesped }}</small>
+                                    <small class="text-muted star-place-holder">
+                                        {{ comentario.calificacion }}
+                                    </small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    {{ cab.calificacion_promedio|json_script:"calificacionPromedio" }}
+    <script src="{% static 'inquilinos/js/estrellas.js' %}"></script>
 {% endblock content %}
