--- a/rentcab/inquilinos/templates/inquilinos/reserva_detail.html
+++ b/rentcab/inquilinos/templates/inquilinos/reserva_detail.html
@@ -37,21 +37,25 @@
                         {{ reserva.huesped }} el {{ reserva.fechaReserva }}
                     </li>
                     <br/>
+                    {% if estadoreserva == "Pte Confirmacion"  %}
                     <li>
-                        {% if reserva.get_estado.nombre == "Pte Confirmacion"  %}
-                                <mark><strong>La reserva quedara pendiente hasta que sea confirmada o rechazada.</strong></mark>
-                        {% else %}
-                            <strong>Estado: </strong>{{ reserva.get_estado }}
-                        {% endif %}
+                        <mark><strong>La reserva quedara pendiente hasta que sea confirmada o rechazada.</strong></mark>
                     </li>
-                    {% if reserva.get_estado.nombre != "Cancelada" %}
-                        <hr/>
-                        <li>
-                            <form action="" method="post">
-                                {% csrf_token %}
-                                <input class="btn btn-secondary" type="submit" value="Cancelar reserva"/>
-                            </form>
-                        </li>
+                    <hr/>
+                    <li>
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            <input class="btn btn-secondary" type="submit" value="Cancelar reserva"/>
+                        </form>
+                    </li>
+                    {% elif reserva.se_puede_calificar %}
+                    <li>
+                        <button class="btn btn-success">Dejar un comentario</button>
+                    </li>
+                    {% else %}
+                    <li>
+                        <strong>Estado: </strong>{{ estadoreserva}}
+                    </li>
                     {% endif %}
                 </ul>
             </div>
