--- a/rentcab/inquilinos/templates/inquilinos/cab_detail.html
+++ b/rentcab/inquilinos/templates/inquilinos/cab_detail.html
@@ -78,10 +78,9 @@
     <div class="album py-5 bg-light">
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                {% for comentario in comentarios  %}
+                {% for comentario in cab.comentarios  %}
                     <div class="col">
                         <div class="card shadow-sm">
-                            {% comment %} <img src="{{ cab.foto_set.first.foto.url }}" alt=""/> {% endcomment %}
                             <div class="card-body">
                                 <p class="card-text">
                                     {{ comentario.comentario}}
@@ -99,6 +98,6 @@
             </div>
         </div>
     </div>
-    {{ cab.calificacion_promedio|json_script:"calificacionPromedio" }}
+    {{ cab.calificacion_promedio|default:"null"|json_script:"calificacionPromedio" }}
     <script src="{% static 'inquilinos/js/estrellas.js' %}"></script>
 {% endblock content %}
