--- a/rentcab/inquilinos/templates/inquilinos/reserva_detail.html
+++ b/rentcab/inquilinos/templates/inquilinos/reserva_detail.html
@@ -38,45 +38,40 @@
                     </li>
                     <br/>
                     {% if estadoreserva == "Pte Confirmacion"  %}
-                    <li>
-                        <mark><strong>La reserva quedara pendiente hasta que sea confirmada o rechazada.</strong></mark>
-                    </li>
-                    <hr/>
-                    <li>
-                        <form action="" method="post">
-                            {% csrf_token %}
-                            <input class="btn btn-secondary" type="submit" value="Cancelar reserva"/>
-                        </form>
-                    </li>
+                        <li>
+                            <mark><strong>La reserva quedara pendiente hasta que sea confirmada o rechazada.</strong></mark>
+                        </li>
+                        <hr/>
+                        <li>
+                            <form action="" method="post">
+                                {% csrf_token %}
+                                <input class="btn btn-secondary" type="submit" value="Cancelar reserva"/>
+                            </form>
+                        </li>
                     {% elif reserva.se_puede_calificar %}
-                    <li>
-                        <button
-                            class="btn btn-success"
-                            type="button"
-                            onclick="location.href='{% url 'inquilinos:crear-comentario' reserva.pk %}'"
-                            >Dejar un comentario</button>
-                    </li>
+                        <li>
+                            <button class="btn btn-success"
+                                    type="button"
+                                    onclick="location.href='{% url 'inquilinos:crear-comentario' reserva.pk %}'">
+                                Dejar un comentario
+                            </button>
+                        </li>
                     {% elif reserva.tiene_comentario %}
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            {% comment %} <img src="{{ cab.foto_set.first.foto.url }}" alt=""/> {% endcomment %}
-                            <div class="card-body">
-                                <p class="card-text">
-                                    {{ reserva.comentario.comentario}}
-                                </p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <small class="text-muted">{{ reserva.comentario.huesped }}</small>
-                                    <small class="text-muted star-place-holder">
-                                        {{ reserva.comentario.calificacion }}/5
-                                    </small>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <div class="card-body">
+                                    <p class="card-text">{{ reserva.comentario.comentario }}</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <small class="text-muted">{{ reserva.comentario.huesped }}</small>
+                                        <small class="text-muted star-place-holder">{{ reserva.comentario.calificacion }}/5</small>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                     {% else %}
-                    <li>
-                        <strong>Estado: </strong>{{ estadoreserva}}
-                    </li>
+                        <li>
+                            <strong>Estado:</strong>{{ estadoreserva }}
+                        </li>
                     {% endif %}
                 </ul>
             </div>
