--- a/rentcab/inquilinos/templates/inquilinos/index.html
+++ b/rentcab/inquilinos/templates/inquilinos/index.html
@@ -23,7 +23,7 @@
                             <img src="{{ cab.foto_set.first.foto.url }}" alt=""/>
                             <div class="card-body">
                                 <p class="card-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.
+                                    {{cab.descripcion}}
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
