--- a/rentcab/inquilinos/templates/inquilinos/reg_res.html
+++ b/rentcab/inquilinos/templates/inquilinos/reg_res.html
@@ -1,24 +1,130 @@
-{% extends 'inquilinos/base.html' %}
-{% block content %}
-    {% load static %}
-    <link rel="stylesheet"
-          type="text/css"
-          href="{% static 'inquilinos/icons/bootstrap-icons/font/bootstrap-icons.css' %}"/>
-    <script src="https://cdn.jsdelivr.net/npm/litepicker/dist/bundle.js"></script>
-    {% load crispy_forms_tags %}
+{% extends 'inquilinos/base.html' %} {% block content %} {% load static %}
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{% static 'inquilinos/icons/bootstrap-icons/font/bootstrap-icons.css' %}"
+/>
+<script src="https://cdn.jsdelivr.net/npm/litepicker/dist/bundle.js"></script>
+<br />
+<div
+  class="col-md-4 offset-md-4 p-4 d-flex justify-content-center border rounded bg-white"
+  id="divreserva"
+>
+  {% if request.user.is_staff %} Por favor, logueate con una cuenta de cliente
+  para probar el registro de reservas. {% else %}
+  <form method="post">
     {% csrf_token %}
-    <br />
-    <div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white"
-         id="divreserva">
-        {% if request.user.is_staff %}
-            Por favor, logueate con una cuenta de cliente para probar el registro de reservas.
-        {% else %}
-            {% crispy form %}
+    <fieldset class="inlineLabels">
+      <legend>Reservar cabaña</legend>
+      <div id="div_id_fechaDesdeHasta" class="form-group">
+        <p class="mb-2">
+          Rango de reserva<span class="asteriskField">*</span>
+          {% if form.fechaDesdeHasta.errors %}
+          <br>
+          {% for error in form.fechaDesdeHasta.errors  %}
+          <span class="text-danger mb-0 mt-0">{{error}}</span>
+          {% endfor %}
+          {% endif %}
+        </p>
+      <div>
+        {{form.fechaDesdeHasta}}
         </div>
-        {{ allowed_dates|json_script:"allowed_dates" }}
-        {{ disabled_dates|json_script:"disabled_dates" }}
-        {{ costoPorAdulto|json_script:"costoPorAdulto" }}
-        {{ costoPorMenor|json_script:"costoPorMenor" }}
-        <script src="{% static 'inquilinos/js/reg_res.js' %}"></script>
+      </div>
+      <div class="row">
+        <div id="div_cantAdultos" class="col-md-6">
+          <div class="input-group mb-3 mt-1" style="max -width: 120px;">
+            <button
+              class="btn btn-outline-secondary"
+              type="button"
+              id="btn-men-ad"
+            >
+              -
+            </button>
+            {{form.cantAdultos}}
+            <button
+              class="btn btn-outline-secondary"
+              type="button"
+              id="btn-mas-ad"
+            >
+              +
+            </button>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <p class="mb-0 text-end">Adultos</p>
+          <p class="fw-light text-end" style="font-size: 14px;">
+            Desde 18 años
+          </p>
+        </div>
+      </div>
+      {% if form.cantAdultos.errors %}
+      <div class="row">
+        {% for error in form.cantAdultos.errors %}
+        <p class="text-danger">{{error}}</p>
+        {% endfor %}
+      </div>
+      {% endif %}
+      <div class="row">
+        <div id="div_id_cantMenores" class="form-group col-md-6 mt-2">
+          <div class="input-group mb-3">
+            <button
+              class="btn btn-outline-secondary"
+              type="button"
+              id="btn-men-men"
+            >
+              -
+            </button>
+            {{form.cantMenores}}
+            <button
+              class="btn btn-outline-secondary"
+              type="button"
+              id="btn-mas-men"
+            >
+              +
+            </button>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <p class="mb-0 text-end">Menores</p>
+          <p class="fw-light text-end" style="font-size: 14px;">
+            Hasta 17 años
+          </p>
+        </div>
+      </div>
+      {% if form.cantMenores.errors %}
+      <div class="row">
+        {% for error in form.cantMenores.errors %}
+        <p class="text-danger">{{error}}</p>
+        {% endfor %}
+      </div>
+      {% endif %}
+      <div id="after_reserva"><p id="ptag"></p></div>
+      {{form.foo_slug}}
+    </fieldset>
+    {% if form.non_field_errors %}
+    {% for error in form.non_field_errors %}
+    <p class="text-danger">{{error}}</p>
+    {% endfor %}
     {% endif %}
-{% endblock content %}
+      <div class="row">
+        <div class="col-md-6 d-grid gap-2">
+          <a class="btn btn-secondary" href="/">Cancelar</a>
+        </div>
+        <div class="col-md-6 d-grid gap-2">
+          <input
+          type="submit"
+          name="submit"
+          value="Confirmar"
+          class="btn btn-primary btn btn-primary cuac"
+          id="submit-id-submit"
+        />
+        </div>
+    </div>
+  </form>
+</div>
+{{ allowed_dates|json_script:"allowed_dates" }}
+{{disabled_dates|json_script:"disabled_dates" }}
+{{costoPorAdulto|json_script:"costoPorAdulto" }}
+{{costoPorMenor|json_script:"costoPorMenor" }}
+<script src="{% static 'inquilinos/js/reg_res.js' %}"></script>
+{% endif %} {% endblock content %}
