Feature cant maxima personas.

--- a/rentcab/inquilinos/templates/inquilinos/reg_res.html
+++ b/rentcab/inquilinos/templates/inquilinos/reg_res.html
@@ -126,5 +126,6 @@
 {{disabled_dates|json_script:"disabled_dates" }}
 {{costoPorAdulto|json_script:"costoPorAdulto" }}
 {{costoPorMenor|json_script:"costoPorMenor" }}
+{{cantMaxPersonas|json_script:"cantMaxPersonas" }}
 <script src="{% static 'inquilinos/js/reg_res.js' %}"></script>
 {% endif %} {% endblock content %}
