--- a/rentcab/inquilinos/templates/inquilinos/reserva_h_list.html
+++ b/rentcab/inquilinos/templates/inquilinos/reserva_h_list.html
@@ -5,7 +5,7 @@
          id="divreserva">
         <div class="container">
             <div class="row">
-                <h1>Reservas</h1>
+                <h1>Mis Reservas</h1>
             </div>
             {% if reserva_list %}
                 <table class="table">
@@ -24,7 +24,7 @@
                             <tr>
                                 <th scope="row">{{ reserva.pk }}</th>
                                 <td>
-                                    <a href="{% url 'inquilinos:cab-det' reserva.cab.slug %}">{{ reserva.cab }}</a>
+                                    <a class="link-secondary" style="text-decoration: none;"href="{% url 'inquilinos:cab-det' reserva.cab.slug %}">{{ reserva.cab }}</a>
                                 </td>
                                 <td>{{ reserva.fechaDesde }}</td>
                                 <td>{{ reserva.fechaHasta }}</td>
